--- a/dht/webserver/css/main.css
+++ b/dht/webserver/css/main.css
@@ -11,7 +11,7 @@ body {
 .page-wrap {
     width: 450px;
     margin: 30px auto;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.06);
+    box-shadow: 0 2px 5px rgba(0,0,0,0.08);
     border-radius: 7px;
 }
 
@@ -42,20 +42,15 @@ h2 {
     border-top: 1px solid #efefef;
     padding: 15px;
     margin: 0 -30px 19px;
-    background: #ffffff; /* Old browsers */
-    background: -moz-linear-gradient(top,  #ffffff 0%, #f6f6f6 47%, #ededed 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(47%,#f6f6f6), color-stop(100%,#ededed)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  #ffffff 0%,#f6f6f6 47%,#ededed 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  #ffffff 0%,#f6f6f6 47%,#ededed 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  #ffffff 0%,#f6f6f6 47%,#ededed 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  #ffffff 0%,#f6f6f6 47%,#ededed 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 ); /* IE6-9 */
-    color: #FC750F;
+    color: #fff;
+    background: #2BACDF;
     position: relative;
     overflow: hidden;
     z-index: 1;
     transition: margin-bottom .4s ease;
 }
+
+.section:first-child h2 { border-top: none; }
 
 .section h2 span {
     position: absolute;
@@ -101,11 +96,16 @@ h2 {
     transition: all .4s ease;
 }
 
-.section form { max-height: 200px;}
-.section.hidden form { max-height: 0;}
+.section { max-height: 260px; transition: all 0.5s ease; overflow: hidden;}
+.section.hidden { max-height: 59px;}
+
+.section form { transition: all .4s .1s ease; }
 .section.hidden { padding-bottom: 0;}
 .section.hidden h2 { color: #2BACDF; background: rgba(255,255,255,0.03);}
 
+.section.hidden form {
+    transform: rotateX(90deg)
+}
 
 .section.status {
     position: relative;
